[gd_scene load_steps=6 format=3 uid="uid://be7m67p1jl1dq"]

[ext_resource type="Script" uid="uid://bgubte6d0bou7" path="res://object/key_listener.gd" id="2_843s5"]
[ext_resource type="Texture2D" uid="uid://c4s3bjvwo4g8p" path="res://art/retsser_block.png" id="2_in64o"]

[sub_resource type="Animation" id="Animation_in64o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOveray:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1)]
}

[sub_resource type="Animation" id="Animation_843s5"]
resource_name = "key_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlowOveray:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.3, 1.3, 1.3, 1), Color(1.3, 1.3, 1.3, 0.462133), Color(1.3, 1.3, 1.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_153p8"]
_data = {
&"RESET": SubResource("Animation_in64o"),
&"key_hit": SubResource("Animation_843s5")
}

[node name="KeyListener" type="Sprite2D"]
texture = ExtResource("2_in64o")
hframes = 2
script = ExtResource("2_843s5")

[node name="RandomSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="GlowOveray" type="Sprite2D" parent="."]
modulate = Color(1.3, 1.3, 1.3, 1)
texture = ExtResource("2_in64o")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_153p8")
}

[connection signal="timeout" from="RandomSpawnTimer" to="." method="_on_random_spawn_timer_timeout"]
